# qpasm

./: .gitignore  Features.md  ProjectHome.md  README.md  SampleAssemblerPrograms.md  UserManual.md  release_qpasm
asm_examples/: exp2.asm
src/: .gitignore  CMakeLists.txt  README  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  addmemdialog.cpp  addmemdialog.h  addmemdialog.ui  codeedit.cpp  codeedit.h  configdialog.cpp  configdialog.h  configdialog.ui  highlighter.cpp  highlighter.h  linevalidator.h  listwidgetitem.cpp  listwidgetitem.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pasmthread.h  qpasm.pro  qpasm.qrc  qtsignalbridge.cpp  qtsignalbridge.h
src/img/: qpasm_logo.xcf
src/libpasm/: debugger.h  errorcodes.c  errorcodes.h  helper.c  helper.h  interpreter.c  interpreter.h  main.c  memory.c  memory.h  opcodes.h  ui.c  ui.h
src/translations/: qpasm_nl.qm  qpasm_nl.ts
trunk/: release_qpasm
trunk/asm_examples/: exp2.asm
trunk/src/: Doxyfile  README  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  addmemdialog.cpp  addmemdialog.h  addmemdialog.ui  codeedit.cpp  configdialog.cpp  configdialog.h  configdialog.ui  highlighter.cpp  highlighter.h  linevalidator.cpp  linevalidator.h  listwidgetitem.h  main.cpp  mainwindow.cpp  mainwindow.ui  pasmthread.cpp  pasmthread.h  qtsignalbridge.cpp  qtsignalbridge.h
trunk/src/img/: timed-step.xcf
trunk/src/libpasm/: Doxyfile  debugger.c  debugger.h  errorcodes.c  errorcodes.h  helper.c  helper.h  interpreter.c  interpreter.h  pasm.h  ui.c  (+1 more)
wiki/: Features.wiki  SampleAssemblerPrograms.wiki  UserManual.wiki
(+2 files in other folders)
